; ModuleID = '/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_revwalk_basic_setup_walk.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/revwalk/extr_basic.c_revwalk_basic_setup_walk.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@_fixture = common dso_local global i8* null, align 8
@_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [13 x i8] c"testrepo.git\00", align 1
@_walk = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @revwalk_basic_setup_walk to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @revwalk_basic_setup_walk(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i8*, i8** %2, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = load i8*, i8** %2, align 8
  store i8* %6, i8** @_fixture, align 8
  %7 = load i8*, i8** %2, align 8
  %8 = call i32 @cl_git_sandbox_init(i8* %7)
  store i32 %8, i32* @_repo, align 4
  br label %13

9:                                                ; preds = %1
  %10 = call i32 @cl_fixture(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str, i64 0, i64 0))
  %11 = call i32 @git_repository_open(i32* @_repo, i32 %10)
  %12 = call i32 @cl_git_pass(i32 %11)
  br label %13

13:                                               ; preds = %9, %5
  %14 = load i32, i32* @_repo, align 4
  %15 = call i32 @git_revwalk_new(i32* @_walk, i32 %14)
  %16 = call i32 @cl_git_pass(i32 %15)
  ret void
}

declare dso_local i32 @cl_git_sandbox_init(i8*) #1

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_open(i32*, i32) #1

declare dso_local i32 @cl_fixture(i8*) #1

declare dso_local i32 @git_revwalk_new(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
